--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -1,3 +1,17 @@
+@Article{Crouse1987,
+author = {Crouse, D. T. and Crowder, L. B. and Caswell, H. }, 
+title = {{A Stage-Based Population Model for Loggerhead Sea Turtles and Implications for Conservation}}, 
+journal = {Ecology}, 
+volume = {68}, 
+issue = {5}, 
+pages = {1412-1423}, 
+year = {1987}, 
+abstract = {}, 
+doi = {10.2307/1939225}, 
+location = {}, 
+keywords = {}}
+
+
 @Article{Crowder1994,
 author = {Crowder, L. B. and Crouse, D. T. and Heppell, S. S. and Martin, T. H. }, 
 title = {{Predicting the impact of turtle excluder devices on loggerhead sea turtle populations}}, 
@@ -8,6 +22,34 @@ pages = {437-445},
 year = {1994}, 
 abstract = {}, 
 doi = {10.2307/1941948}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{deValpine2014,
+author = {{de Valpine}, P. and Scranton, K. and Knape, J. and Ram, K. and Mills, N. J. }, 
+title = {{The importance of individual developmental variation in stage-structured population models.}}, 
+journal = {Ecol Lett}, 
+volume = {17}, 
+issue = {}, 
+pages = {1026-1038}, 
+year = {2014}, 
+abstract = {Population stage structure is fundamental to ecology, and models of this structure have proven useful in many different systems. Many ecological variables other than stage, such as habitat type, site occupancy and metapopulation status are also modelled using transitions among discrete states. Transitions among life stages can be characterised by the distribution of time spent in each stage, including the mean and variance of each stage duration and within-individual correlations among multiple stage durations. Three modelling traditions represent stage durations differently. Matrix models can be derived as a long-run approximation from any distribution of stage durations, but they are often interpreted directly as a Markov model for stage transitions. Statistical stage-duration distribution models accommodate the variation typical of cohort development data, but such realism has rarely been incorporated in population theory or statistical population models. Delay-differential equation models include lags but no variation, except in limited cases. We synthesise these models in one framework and illustrate how individual variation and correlations in development can impact population growth. Furthermore, different development models can yield the same long-term matrix transition rates but different sensitivities and elasticities. Finally, we discuss future directions for estimating realistic stage duration models from data.}, 
+doi = {10.1111/ele.12290}, 
+location = {}, 
+keywords = {Animals; Arthropods; Arthropods: physiology; Biological; Life Cycle Stages; Life Cycle Stages: physiology; Models; Population Dynamics; Statistical}}
+
+
+@Article{Fujiwara2001a,
+author = {Fujiwara, M. and Caswell, H. }, 
+title = {{Demography of the endangered North Atlantic right whale}}, 
+journal = {Nature}, 
+volume = {414}, 
+issue = {}, 
+pages = {537-541}, 
+year = {2001}, 
+abstract = {}, 
+doi = {10.1038/35107054}, 
 location = {}, 
 keywords = {}}
 
@@ -39,6 +81,33 @@ location = {},
 keywords = {}}
 
 
+@Article{Cousin2006,
+author = {Cousin, G. }, 
+title = {{An introduction to threshold concepts}}, 
+journal = {Planet}, 
+volume = {17}, 
+issue = {1}, 
+pages = {4-5}, 
+year = {2006}, 
+abstract = {}, 
+doi = {10.11120/plan.2006.00170004}, 
+location = {}, 
+keywords = {}}
+
+
+@Book{Ellner2016a,
+author = {Ellner, S. P. and Childs, D. Z. and Rees, M. }, 
+title = {Data-driven Modelling of Structured Populations: A Practical Guide to the Integral Projection Model}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+edition = {}, 
+publisher = {Springer International}, 
+address = {Switzerland}, 
+year = {2016}, 
+abstract = {Book Description: This book is a ``How To'' guide for modeling population dynamics using Integral Projection Models (IPM) starting from observational data. It is written by a leading research team in this area and includes code in the R language (in the text and online) to carry out all computations. The intended audience are ecologists, evolutionary biologists, and mathematical biologists interested in developing data-driven models for animal and plant populations. IPMs may seem hard as they involve integrals. The aim of this book is to demystify IPMs, so they become the model of choice for populations structured by size or other continuously varying traits. The book uses real examples of increasing complexity to show how the life-cycle of the study organism naturally leads to the appropriate statistical analysis, which leads directly to the IPM itself. A wide range of model types and analyses are presented, including model construction, computational methods, and the underlying theory, with the more technical material in Boxes and Appendices. Self-contained R code which replicates all of the figures and calculations within the text is available to readers on GitHub. Stephen P. Ellner is Horace White Professor of Ecology and Evolutionary Biology at Cornell University, USA; Dylan Z. Childs is Lecturer and NERC Postdoctoral Fellow in the Department of Animal and Plant Sciences at The University of Sheffield, UK; Mark Rees is Professor in the Department of Animal and Plant Sciences at The University of Sheffield, UK.}, 
+url = {http://www.amazon.com/Data-driven-Modelling-Structured-Populations-Mathematical/dp/3319288911\%3FSubscriptionId\%3D0NM5T5X751JWT17C4GG2\%26tag\%3Dsonnysoftware\%26linkCode\%3Dxm2\%26camp\%3D2025\%26creative\%3D165953\%26creativeASIN\%3D3319288911}}
+
 @Article{Salguero-Gomez2016,
 author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Archer, C. R. and Bein, C. and de Buhr, H. and Farack, C. and Gottschalk, F. and Hartmann, A. and Henning, A. and Hoppe, G. and R{\"o}mer, G. and Ruoff, T. and Sommer, V. and Wille, J. and Voigt, J. and Zeh, S. and Vieregg, D. and Buckley, Y. M. and Che-Castaldo, J. and Hodgson, D. and Scheuerlein, A. and Caswell, H. and Vaupel, J. W. }, 
 title = {{{COMADRE}: a global data base of animal demography.}}, 
@@ -52,6 +121,33 @@ doi = {10.1111/1365-2656.12482},
 location = {}, 
 keywords = {}}
 
+
+@Article{Salguero-Gomez2016a,
+author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Jongejans, E. and Blomberg, S. P. and Hodgson, D. J. and Mbeau-Ache, C. and Zuidema, P. A. and de Kroon, H. and Buckley, Y. M. }, 
+title = {{Fast-slow continuum and reproductive strategies structure plant life-history variation worldwide.}}, 
+journal = {Proc. Natl. Acad. Sci. U. S. A.}, 
+volume = {113}, 
+issue = {1}, 
+pages = {230-235}, 
+year = {2016}, 
+abstract = {The identification of patterns in life-history strategies across the tree of life is essential to our prediction of population persistence, extinction, and diversification. Plants exhibit a wide range of patterns of longevity, growth, and reproduction, but the general determinants of this enormous variation in life history are poorly understood. We use demographic data from 418 plant species in the wild, from annual herbs to supercentennial trees, to examine how growth form, habitat, and phylogenetic relationships structure plant life histories and to develop a framework to predict population performance. We show that 55\% of the variation in plant life-history strategies is adequately characterized using two independent axes: the fast-slow continuum, including fast-growing, short-lived plant species at one end and slow-growing, long-lived species at the other, and a reproductive strategy axis, with highly reproductive, iteroparous species at one extreme and poorly reproductive, semelparous plants with frequent shrinkage at the other. Our findings remain consistent across major habitats and are minimally affected by plant growth form and phylogenetic ancestry, suggesting that the relative independence of the fast-slow and reproduction strategy axes is general in the plant kingdom. Our findings have similarities with how life-history strategies are structured in mammals, birds, and reptiles. The position of plant species populations in the 2D space produced by both axes predicts their rate of recovery from disturbances and population growth rate. This life-history framework may complement trait-based frameworks on leaf and wood economics; together these frameworks may allow prediction of responses of plants to anthropogenic disturbances and changing environments.}, 
+doi = {10.1073/pnas.1506215112}, 
+location = {}, 
+keywords = {}}
+
+
+@Book{Mills2007,
+author = {Mills, L. S. }, 
+title = {Conservation of Wildlife Populations: Demography, Genetics, and Management}, 
+volume = {}, 
+pages = {342}, 
+editor = {}, 
+edition = {}, 
+publisher = {Blackwell}, 
+address = {Malden, MA}, 
+year = {2007}, 
+abstract = {}, 
+url = {https://www.amazon.com/Conservation-Wildlife-Populations-Demography-Management/dp/0470671491\%3FSubscriptionId\%3D0NM5T5X751JWT17C4GG2\%26linkCode\%3Dxm2\%26camp\%3D2025\%26creative\%3D165953\%26creativeASIN\%3D0470671491}}
 
 @Article{Fujiwara2017,
 author = {Fujiwara, M. and Diaz-Lopez, J. }, 
@@ -119,47 +215,6 @@ year = {2015},
 abstract = {The generation time is commonly defined as the mean age of mothers at birth. In matrix population models, a general formula is available to compute this quantity. However, it is complex and hard to interpret. Here, we present a new approach where the generation time is envisioned as a return time in an appropriate Markov chain. This yields surprisingly simple results, such as the fact that the generation time is the inverse of the sum of the elasticities of the growth rate to changes in the fertilities. This result sheds new light on the interpretation of elasticities (which as we show correspond to the frequency of events in the ancestral lineage of the population), and we use it to generalize a result known as Lebreton's formula. Finally, we also show that the generation time can be seen as a random variable, and we give a general expression for its distribution.}, 
 doi = {10.1086/681104}, 
 location = {Unit{\'e} Mixte de Recherche 8197, Institut de Biologie de l'{\'E}cole Normale Sup{\'e}rieure (Centre National de la Recherche Scientifique, {\'E}cole Normale Sup{\'e}rieure), 46 Rue d'Ulm, 75230 Paris Cedex 05, France.}, 
-keywords = {}}
-
-
-@Article{Crouse1987,
-author = {Crouse, D. T. and Crowder, L. B. and Caswell, H. }, 
-title = {{A Stage-Based Population Model for Loggerhead Sea Turtles and Implications for Conservation}}, 
-journal = {Ecology}, 
-volume = {68}, 
-issue = {5}, 
-pages = {1412-1423}, 
-year = {1987}, 
-abstract = {}, 
-doi = {10.2307/1939225}, 
-location = {}, 
-keywords = {}}
-
-
-@Book{Caswell2001,
-author = {Caswell, H. }, 
-title = {Matrix population models: Construction, analysis, and interpretation}, 
-volume = {}, 
-pages = {}, 
-editor = {}, 
-edition = {2nd}, 
-publisher = {Sinauer Associates}, 
-address = {Sunderland, MA}, 
-year = {2001}, 
-abstract = {}, 
-url = {}}
-
-@Article{Salguero-Gomez2016a,
-author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Jongejans, E. and Blomberg, S. P. and Hodgson, D. J. and Mbeau-Ache, C. and Zuidema, P. A. and de Kroon, H. and Buckley, Y. M. }, 
-title = {{Fast-slow continuum and reproductive strategies structure plant life-history variation worldwide.}}, 
-journal = {Proc. Natl. Acad. Sci. U. S. A.}, 
-volume = {113}, 
-issue = {1}, 
-pages = {230-235}, 
-year = {2016}, 
-abstract = {The identification of patterns in life-history strategies across the tree of life is essential to our prediction of population persistence, extinction, and diversification. Plants exhibit a wide range of patterns of longevity, growth, and reproduction, but the general determinants of this enormous variation in life history are poorly understood. We use demographic data from 418 plant species in the wild, from annual herbs to supercentennial trees, to examine how growth form, habitat, and phylogenetic relationships structure plant life histories and to develop a framework to predict population performance. We show that 55\% of the variation in plant life-history strategies is adequately characterized using two independent axes: the fast-slow continuum, including fast-growing, short-lived plant species at one end and slow-growing, long-lived species at the other, and a reproductive strategy axis, with highly reproductive, iteroparous species at one extreme and poorly reproductive, semelparous plants with frequent shrinkage at the other. Our findings remain consistent across major habitats and are minimally affected by plant growth form and phylogenetic ancestry, suggesting that the relative independence of the fast-slow and reproduction strategy axes is general in the plant kingdom. Our findings have similarities with how life-history strategies are structured in mammals, birds, and reptiles. The position of plant species populations in the 2D space produced by both axes predicts their rate of recovery from disturbances and population growth rate. This life-history framework may complement trait-based frameworks on leaf and wood economics; together these frameworks may allow prediction of responses of plants to anthropogenic disturbances and changing environments.}, 
-doi = {10.1073/pnas.1506215112}, 
-location = {}, 
 keywords = {}}
 
 
@@ -273,18 +328,17 @@ location = {},
 keywords = {}}
 
 
-@Book{Gallager1995,
-author = {Gallager, R. G. }, 
-title = {Discrete Stochastic Processes}, 
+@Book{Meyer2006,
+author = {}, 
+title = {Overcoming Barriers to Student Understanding: Threshold concepts and troublesome knowledge}, 
 volume = {}, 
 pages = {}, 
-editor = {}, 
-edition = {}, 
-publisher = {Kluwer Academic Publishers}, 
-address = {Norwell, MA}, 
-year = {1995}, 
-abstract = {}, 
-url = {}}
+editor = {Meyer, Jan and Land, Ray}, 
+publisher = {Routledge}, 
+address = {London}, 
+year = {2006}, 
+abstract = {Book Description: It has long been a matter of concern to teachers in higher education why certain students `get stuck' at particular points in the curriculum whilst others grasp concepts with comparative ease. What accounts for this variation in student performance and, more importantly, how can teachers change their teaching and courses to help students overcome such barriers? This book examines the difficulties of student learning and offers advice on how to overcome them through course design, assessment practice and teaching methods. It also provides innovative case material from a wide range of institutions and disciplines, including the social sciences, the humanities, the sciences and economics.}, 
+keywords = {}}
 
 @Incollection{Meyer2003a,
 author = {Meyer, J. H. F. and Land, R. }, 
@@ -298,44 +352,18 @@ year = {2003},
 abstract = {}, 
 keywords = {}}
 
-@Book{Meyer2006,
-author = {}, 
-title = {Overcoming Barriers to Student Understanding: Threshold concepts and troublesome knowledge}, 
+@Book{Gallager1995,
+author = {Gallager, R. G. }, 
+title = {Discrete Stochastic Processes}, 
 volume = {}, 
 pages = {}, 
-editor = {Meyer, Jan and Land, Ray}, 
-publisher = {Routledge}, 
-address = {London}, 
-year = {2006}, 
-abstract = {Book Description: It has long been a matter of concern to teachers in higher education why certain students `get stuck' at particular points in the curriculum whilst others grasp concepts with comparative ease. What accounts for this variation in student performance and, more importantly, how can teachers change their teaching and courses to help students overcome such barriers? This book examines the difficulties of student learning and offers advice on how to overcome them through course design, assessment practice and teaching methods. It also provides innovative case material from a wide range of institutions and disciplines, including the social sciences, the humanities, the sciences and economics.}, 
-keywords = {}}
-
-@Book{Mills2007,
-author = {Mills, L. S. }, 
-title = {Conservation of Wildlife Populations: Demography, Genetics, and Management}, 
-volume = {}, 
-pages = {342}, 
 editor = {}, 
 edition = {}, 
-publisher = {Blackwell}, 
-address = {Malden, MA}, 
-year = {2007}, 
+publisher = {Kluwer Academic Publishers}, 
+address = {Norwell, MA}, 
+year = {1995}, 
 abstract = {}, 
-url = {https://www.amazon.com/Conservation-Wildlife-Populations-Demography-Management/dp/0470671491\%3FSubscriptionId\%3D0NM5T5X751JWT17C4GG2\%26linkCode\%3Dxm2\%26camp\%3D2025\%26creative\%3D165953\%26creativeASIN\%3D0470671491}}
-
-@Article{Cousin2006,
-author = {Cousin, G. }, 
-title = {{An introduction to threshold concepts}}, 
-journal = {Planet}, 
-volume = {17}, 
-issue = {1}, 
-pages = {4-5}, 
-year = {2006}, 
-abstract = {}, 
-doi = {10.11120/plan.2006.00170004}, 
-location = {}, 
-keywords = {}}
-
+url = {}}
 
 @Book{Kendall2018a,
 author = {Kendall, B. E. }, 
@@ -350,20 +378,6 @@ year = {2018},
 abstract = {}, 
 url = {}}
 
-@Article{Muller2008a,
-author = {Muller, D. A. and Sharma, M. D. and Reimann, P. }, 
-title = {{Raising cognitive load with linear multimedia to promote conceptual change}}, 
-journal = {Sci Educ}, 
-volume = {92}, 
-issue = {2}, 
-pages = {278-296}, 
-year = {2008}, 
-abstract = {}, 
-doi = {10.1002/sce.20244}, 
-location = {}, 
-keywords = {}}
-
-
 @Article{Muller2008,
 author = {Muller, D. A. and Bewes, J. and Sharma, M. D. and Reimann, P. }, 
 title = {{Saying the wrong thing: improving learning with multimedia by including misconceptions: Misconception-based multimedia instruction}}, 
@@ -374,6 +388,20 @@ pages = {144-155},
 year = {2008}, 
 abstract = {}, 
 doi = {10.1111/j.1365-2729.2007.00248.x}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Muller2008a,
+author = {Muller, D. A. and Sharma, M. D. and Reimann, P. }, 
+title = {{Raising cognitive load with linear multimedia to promote conceptual change}}, 
+journal = {Sci Educ}, 
+volume = {92}, 
+issue = {2}, 
+pages = {278-296}, 
+year = {2008}, 
+abstract = {}, 
+doi = {10.1002/sce.20244}, 
 location = {}, 
 keywords = {}}
 
@@ -406,19 +434,6 @@ location = {},
 keywords = {}}
 
 
-@Book{Ellner2016a,
-author = {Ellner, S. P. and Childs, D. Z. and Rees, M. }, 
-title = {Data-driven Modelling of Structured Populations: A Practical Guide to the Integral Projection Model}, 
-volume = {}, 
-pages = {}, 
-editor = {}, 
-edition = {}, 
-publisher = {Springer International}, 
-address = {Switzerland}, 
-year = {2016}, 
-abstract = {Book Description: This book is a ``How To'' guide for modeling population dynamics using Integral Projection Models (IPM) starting from observational data. It is written by a leading research team in this area and includes code in the R language (in the text and online) to carry out all computations. The intended audience are ecologists, evolutionary biologists, and mathematical biologists interested in developing data-driven models for animal and plant populations. IPMs may seem hard as they involve integrals. The aim of this book is to demystify IPMs, so they become the model of choice for populations structured by size or other continuously varying traits. The book uses real examples of increasing complexity to show how the life-cycle of the study organism naturally leads to the appropriate statistical analysis, which leads directly to the IPM itself. A wide range of model types and analyses are presented, including model construction, computational methods, and the underlying theory, with the more technical material in Boxes and Appendices. Self-contained R code which replicates all of the figures and calculations within the text is available to readers on GitHub. Stephen P. Ellner is Horace White Professor of Ecology and Evolutionary Biology at Cornell University, USA; Dylan Z. Childs is Lecturer and NERC Postdoctoral Fellow in the Department of Animal and Plant Sciences at The University of Sheffield, UK; Mark Rees is Professor in the Department of Animal and Plant Sciences at The University of Sheffield, UK.}, 
-url = {http://www.amazon.com/Data-driven-Modelling-Structured-Populations-Mathematical/dp/3319288911\%3FSubscriptionId\%3D0NM5T5X751JWT17C4GG2\%26tag\%3Dsonnysoftware\%26linkCode\%3Dxm2\%26camp\%3D2025\%26creative\%3D165953\%26creativeASIN\%3D3319288911}}
-
 @Article{Paniw2018,
 author = {Paniw, M. and Ozgul, A. and Salguero-G{\'o}mez, R. }, 
 title = {{Interactive life-history traits predict sensitivity of plants and animals to temporal autocorrelation}}, 
@@ -433,17 +448,30 @@ location = {},
 keywords = {}}
 
 
-@Article{Fujiwara2001a,
-author = {Fujiwara, M. and Caswell, H. }, 
-title = {{Demography of the endangered North Atlantic right whale}}, 
-journal = {Nature}, 
-volume = {414}, 
+@Article{Caswell2018,
+author = {Caswell, H. and de Vries, C. and Hartemink, N. and Roth, G. and van Daalen, S. F. }, 
+title = {{Age * stage-classified demographic analysis: a comprehensive approach}}, 
+journal = {Ecol Monogr}, 
+volume = {88}, 
 issue = {}, 
-pages = {537-541}, 
-year = {2001}, 
+pages = {}, 
+year = {2018}, 
 abstract = {}, 
-doi = {10.1038/35107054}, 
+doi = {10.1002/ecm.1306}, 
 location = {}, 
 keywords = {}}
 
+
+@Book{Caswell2001,
+author = {Caswell, H. }, 
+title = {Matrix population models: Construction, analysis, and interpretation}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+edition = {2nd}, 
+publisher = {Sinauer Associates}, 
+address = {Sunderland, MA}, 
+year = {2001}, 
+abstract = {}, 
+url = {}}
 
